--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -3,5 +3,5 @@
 About
 {% endblock %}
 {% block content %}
-<p>About page for the Visual Studio Code Flask tutorial.</p>
+<p><h1> Blog </h1></p>
 {% endblock %}
