--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -3,5 +3,24 @@
 Zach Hudson
 {% endblock %}
 {% block content %}
-<p>Welcome to Zach's little home on the web...</p>
+<p>
+    I have a passion for continuous learning. I am an avid technology expert, Machine Learning (ML) and A.I. enthusiast, a fan of blockchain
+    technology, and have a severe appreciation for all things that provide an excellent User Experience (UX).
+    <br>
+    I am an Electrical Engineer with a diverse background in technology, medical devices, power generation, and automotive. I love working 
+    on unique and challenging assignments that require the use of my out-of-the-box thinking while providing the opportunity to learn and 
+    grow as an engineer. My ability to pick up new skills quickly as well as my strong teamwork and communication abilities, have helped me 
+    to play an increasingly important role at each company I have been with, allowing me to be a leader among my peers. 
+    <br>    
+    Feel free to reach out to me if you have any questions or would like to connect. I am always interested in networking with other 
+    professionals and discussing opportunities.
+</p>
+<p><h2>"Gallup CliftonStrengths" Top 5 Personality Traits:</h2></p>
+<p>
+    <ul>Learner</ul> 
+    <ul>Futuristic</ul>
+    <ul>Achiever</ul>
+    <ul>Analytical</ul>
+    <ul>Focus</ul>
+</p>
 {% endblock %}
