--- a/web_app/templates/layout.html
+++ b/web_app/templates/layout.html
@@ -7,23 +7,41 @@
     </head>
 
     <body>
-        <div class="navbar">
-            <a href="{{ url_for('home') }}" class="navbar-brand">Home</a>
-            <a href="{{ url_for('about') }}" class="navbar-item">About</a>
-            <a href="{{ url_for('contact') }}" class="navbar-item">Contact</a>
+        <div class="grid-layout">
+            <div class="navbar-item">
+                <a href="{{ url_for('home') }}" class="home">Home</a>
+                <a href="{{ url_for('about') }}" class="item">About</a>
+                <a href="{{ url_for('contact') }}" class="item">Contact</a>
+            </div>
+            
+            <div class="left-bracket">
+                    <img src="{{url_for('static', filename='left_bracket.png')}}" alt="{">
+            </div>
+
             <div class="image-cropper">
                 <img src="{{url_for('static', filename='zach.jpg')}}" alt="Zach" class="profile-pic">
+            </div>    
+            
+            <div class="right-bracket">
+                    <img src="{{url_for('static', filename='right_bracket.png')}}" alt="}">
             </div>
-        </div>
 
+            <div class="social-link">
+                <img src="{{url_for('static', filename='Logo-2C-14px.png')}}" alt="LinkedIn" class="linkedin-logo">
+                <img src="{{url_for('static', filename='GitHub_Logo.png')}}" alt="GitHub" class="github-logo">
+            </div>
+            
+            <div class="body-content">
+                {% block content %}
+                {% endblock %}
+            </div>
 
-        <div class="body-content">
-            {% block content %}
-            {% endblock %}
-            <hr/>
-            <footer>
-                <p>&copy; 2018</p>
-            </footer>
+            <div class="footer">
+                <footer>
+                    <p class="copyright">&copy; 2018</p>
+                </footer>
+            </div>
         </div>
     </body>
 </html>
+
