--- a/web_app/templates/layout_old.html
+++ b/web_app/templates/layout_old.html
@@ -15,31 +15,29 @@
                 <a href="{{ url_for('about') }}" class="item">About</a>
                 <a href="{{ url_for('contact') }}" class="item">Contact</a>
             </div>
+            
+            <div class="left-bracket">
+                    <p><strong>Zach</strong></p>
+            </div>
 
             <div class="image-cropper">
                 <img src="{{url_for('static', filename='zach.jpg')}}" alt="Zach" class="profile-pic">
             </div>    
             
-            <div class="social-link">
-                <i class="name">            
-                    <p><strong>Zach Hudson</strong></p>
-                </i>
+            <div class="right-bracket">
+                    <p><strong>Hudson</strong></p>
+            </div>
 
-                <div class="horizontal-line"></div>
-                
-                <div class="social-icons">
-                <a href="https://twitter.com/zkhudson">
-                    <i class="fab fa-twitter-square" style="font-size: 2rem;"></i>
-                </a>
-                
+            
+            
+            <div class="horizontal-line"></div>
+            <div class="social-link" style="font-size: 2rem;">
                 <a href="https://www.linkedin.com/in/zachhudson/">
-                    <i class="fab fa-linkedin" style="font-size: 2rem;"></i>
+                    <i class="fab fa-linkedin"></i>
                 </a>
-                
                 <a href="https://github.com/zkhudson">
-                    <i class="fab fa-github-square" style="font-size: 2rem;"></i>
+                    <i class="fab fa-github-square"></i>
                 </a>
-                </div>
             </div>
             
             <div class="body-content">
