Initial Deployment on AWS

--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -4,14 +4,12 @@ Zach Hudson
 {% endblock %}
 {% block content %}
 <p>
-    I have a passion for continuous learning. I am an avid technology expert, Machine Learning (ML) and A.I. enthusiast, a fan of blockchain
-    technology, and have a severe appreciation for all things that provide an excellent User Experience (UX).
-    <br>
-    <br>
-    I am an Electrical Engineer with a diverse background in technology, medical devices, power generation, and automotive. I love working 
-    on unique and challenging assignments that require the use of my out-of-the-box thinking while providing the opportunity to learn and 
-    grow as an engineer. My ability to pick up new skills quickly as well as my strong teamwork and communication abilities, have helped me 
-    to play an increasingly important role at each company I have been with, allowing me to be a leader among my peers. 
+    As an Electrical Engineer, I've attained a diverse background in technology, medical devices, power generation, 
+    and automotive. I have an appetite for continuous learning, have a massive appreciation for all things that provide a 
+    great User Experience (UX) and finding ways to automate things. I love working on unique and challenging assignments 
+    that require the use of my out-of-the-box thinking while providing the opportunity to learn and grow as an engineer. 
+    My ability to pick up new skills quickly as well as my strong teamwork and communication abilities, have helped me to 
+    play an increasingly important role at each company I have been with, allowing me to be a leader among my peers.
     <br>
     <br>
     Feel free to reach out to me if you have any questions or would like to connect. I am always interested in networking with other 
