--- a/web_app/static/site.css
+++ b/web_app/static/site.css
@@ -7,9 +7,17 @@ header, footer {
     grid-column: 1 / 4;
   }
 
+.header {
+    grid-row-start: 1;
+    grid-row-end: 1;
+    grid-column-start: 1;
+    grid-column-end: 6;
+    background-color: rgb(142, 143, 146);
+}
+
 .grid-layout {
     display: grid;
-    grid-template-columns: 12.5em auto 12.5em;
+    grid-template-columns: auto auto 8.75em;
     grid-template-rows: 6.25em 1fr 3.125em;
     grid-gap: 1em;
     font-size: 1em;
@@ -22,25 +30,60 @@ header, footer {
     color: inherit;
 }
 
-.navbar-item {
+.left-sidebar {
+    grid-row-start: 1;
+    grid-row-end: 6;
+    grid-column-start: 1;
+    grid-column-end: 2;
+}
+
+nav {
     grid-row: 1;
     grid-column: 1 / 2;
 }
 
-.navbar-item .home {
-    font-size: 1.2em;
+nav .home {
+    font-size: 1.1em;
     font-weight: 600;
     padding-right: 10px;
+    padding-left: 1.5px;
 }
 
-.navbar-item .item {
+nav .item {
     font-size: 1em;
-    font-weight: 400;
 }
 
-.navbar-item .item:hover, .home:hover {
-    background-color: rgb(240, 240, 240);
-}
+.hvr-underline-from-center {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    position: relative;
+    overflow: hidden;
+  }
+  
+.hvr-underline-from-center:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    left: 51%;
+    right: 51%;
+    bottom: -2px;
+    background: rgb(160, 202, 7);
+    height: 4px;
+    -webkit-transition-property: left, right;
+    transition-property: left, right;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+  }
+  
+.hvr-underline-from-center:hover:before, .hvr-underline-from-center:focus:before, .hvr-underline-from-center:active:before {
+    left: 0;
+    right: 0;
+  }
 
 .image-cropper {
     grid-row: 1;
@@ -51,17 +94,15 @@ header, footer {
     overflow: hidden;
     border-radius: 50%;
     justify-self: center;
-    border: 1px solid black;
+    border: 1.3px solid black;
 
 }
 
 .profile-pic {
-  display: block;
   grid-row: 1;
   grid-column: 2 / 3;
-  align-items: flex-start;
-  margin: 0 auto;
-  height: 100%;
+  margin: auto;
+  height: 110%;
   width: auto;
 }
 
@@ -71,7 +112,7 @@ header, footer {
     justify-content: space-evenly;
     position: relative;
     overflow: hidden;
-    place-content: start;
+
 }
 
 .social-link i {
@@ -79,16 +120,15 @@ header, footer {
 }
 
 .social-link p {
-    margin: 2%;
+    margin: 2% 0% 0% 0%;
 }
 
 .social-icons {
-    place-self: end;
+    margin: 0% 0% 0% 1%;
 }
-
 .name {
     font-family: 'Roboto', sans-serif;
-    font-size: 1.5rem;
+    font-size: 1.45em;
     margin: 0%;
 }
 
@@ -111,5 +151,13 @@ header, footer {
 
 .footer {
     grid-row: 3;
-    justify-self: first baseline;
+    grid-column: 3 / 4;
+    justify-self: right;
+}
+
+.built-with {
+    grid-row: 3;
+    grid-column: 2 / 3;
+    font-family: 'Roboto', sans-serif;
+    justify-self: center;
 }
