--- a/web_app/templates/layout.html
+++ b/web_app/templates/layout.html
@@ -10,11 +10,11 @@
 
     <body>
         <div class="grid-layout">
-            <div class="navbar-item">
-                <a href="{{ url_for('home') }}" class="home">Home</a>
-                <a href="{{ url_for('about') }}" class="item">About</a>
-                <a href="{{ url_for('contact') }}" class="item">Contact</a>
-            </div>
+            <div class="header"></div>
+            <div class="left-sidebar"></div>
+            <nav>
+                <a href="{{ url_for('home') }}" class="home hvr-underline-from-center">Home</a>
+            </nav>
 
             <div class="image-cropper">
                 <img src="{{url_for('static', filename='zach.jpg')}}" alt="Zach" class="profile-pic">
@@ -28,6 +28,10 @@
                 <div class="horizontal-line"></div>
                 
                 <div class="social-icons">
+                <a href="mailto:zkhudson@gmail.com">
+                    <i class="fas fa-envelope-square" style="font-size: 2rem;"></i>
+                </a>
+                
                 <a href="https://twitter.com/zkhudson">
                     <i class="fab fa-twitter-square" style="font-size: 2rem;"></i>
                 </a>
@@ -41,16 +45,21 @@
                 </a>
                 </div>
             </div>
-            
             <div class="body-content">
                 {% block content %}
                 {% endblock %}
             </div>
-
             <div class="footer">
                 <footer>
                     <p class="copyright">&copy; 2018</p>
                 </footer>
+            </div>
+
+            <div class="built-with" style="font-size: 1.35rem;">
+                <p>
+                    <i class="fab fa-python"></i>  <i class="fas fa-plus" style="font-size: 1rem;"></i>  
+                    <i class="fas fa-flask"></i>  <i class="fas fa-plus" style="font-size: 1rem;"></i>  <i class="fab fa-aws"></i>
+                </p>
             </div>
         </div>
     </body>
