Changed landing (home) page content
Wrote a new landing page intro for visitors to my website.

--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -4,16 +4,13 @@ Zach Hudson
 {% endblock %}
 {% block content %}
 <p>
-    As an Electrical Engineer, I've attained a diverse background in technology, medical devices, power generation, 
-    and automotive. I have an appetite for continuous learning, have a massive appreciation for all things that provide a 
-    great User Experience (UX) and finding ways to automate things. I love working on unique and challenging assignments 
-    that require the use of my out-of-the-box thinking while providing the opportunity to learn and grow as an engineer. 
-    My ability to pick up new skills quickly as well as my strong teamwork and communication abilities, have helped me to 
-    play an increasingly important role at each company I have been with, allowing me to be a leader among my peers.
+    Hi, I’m Zach. I went to school to be an Electrical Engineer, but at my core, I’m an engineer who loves problem-solving and 
+    continually learning. I enjoy most everything in the technology realm, but right now I am most consumed with web development, 
+    software test automation, and machine learning. Mostly...I just love all things web related. I was born, raised, and live in Michigan (even though I’m not a huge fan of snow), 
+    currently residing in the lovely city of Kalamazoo.
     <br>
     <br>
-    Feel free to reach out to me if you have any questions or would like to connect. I am always interested in networking with other 
-    professionals and discussing opportunities.
+    You can reach me using any of the social links above, or shoot me a DM on <a href="https://twitter.com/zkhudson"><u>Twitter</u></a>.
 </p>
 
 {% endblock %}
